# bug-repro-cmake-hang

Tools/: .gitignore  Directory.Build.props  Tools.code-workspace  Tools.sln
Tools/BuildContent/: BuildContent.csproj  Program.cs
Tools/BuildContent/ScriptHelpers/: Path.cs
Tools/Cobalt.Content/: Cobalt.Content.csproj  NativeLib.cs
Tools/Cobalt.Content.Native/: CMakeLists.txt  test.cpp
